@@ -1,9 +1,15 @@
+2017-11-08  larissa9839  <larissa9839@gmail.com>
+
+	* tryXpath/scripts/try_xpath_content.js:
+	Fix focusItem function.
+
 2017-11-07  larissa9839  <larissa9839@gmail.com>
 
 	* tryXpath/popup/popup.js:
 	Define helpCheckbox variable.
 	Define changeHelpVisible function.
 	Define helpBody variable.
+	Fix sendToSpecifiedFrame function.
 
 	* tryXpath/popup/popup.html (Main):
 	Modify texts.
